# SchemaRAG-dify-plugin

./: README_CN.md  config.py  manifest.yaml  pyproject.toml  requirements.txt  test_opengauss.py  打包命令.md
docs/: SCHEMARAG_DIFY_USER_MANUAL.md  SCHEMARAG_TODO_NOTES.md
provider/: build_schema_rag.py  provider.yaml
service/: database_service.py  schema_builder.py
tools/: llm_plot.yaml  llm_plot_lite.py  llm_plot_lite.yaml
