[project]
name = "SchemaRAG"
version = "0.1.6"
description = "Build database schema for RAG in Dify dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dify-plugin",
    "sqlalchemy",
    "pymysql",
    "psycopg2-binary",
    "httpx",
    "dify-client",
    "pandas>=2.3.1",
    "tabulate>=0.9.0",
    # 额外的数据库驱动
    "pymssql",
    "pytest>=8.4.1",
    "dmpython>=2.5.22",
    "dmsqlalchemy>=2.0.0",  # 达梦数据库 SQLAlchemy 方言适配器
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tools", "service", "core", "provider"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv]
python-downloads = "never"
